# quetzalcoatl-project

./: .gitignore  README.md  requirements.dev.txt
controller_driver/: .gitignore  .project  Makefile  README.md  chconf.h  communication.c  communication.h  gazel_problems.md  halconf.h  load.sh  lwipopts.h  mcuconf.h  pin_usage.md  project.mk  usbcfg.c
controller_driver/include/: MT.h  MT_control.h  common.h  communication.h  controllers.h  emergency_stop.h  engine_ignition.h  feedback.h  fuzzy_logic.h  high_speed_control.h  lld_can.h  lld_control.h  lld_dac.h  lld_encoder.h  lld_ext_dac.h  lld_gyroscope.h  lld_odometry.h  lld_px4flow.h  lld_sensor_module.h  lld_steer.h  lld_steer_step_motor.h  lld_steer_step_threaded.h  low_speed_control.h  mt_control.h  (+11 more)
docs/: README.md
quetzalcoatl_description/: CMakeLists.txt  README.md  package.xml
quetzalcoatl_description/config/: props.yaml
quetzalcoatl_description/launch/: model.launch  quetzalcoatl.launch
quetzalcoatl_description/rviz/: overview.rviz
quetzalcoatl_description/urdf/: base.urdf.xacro  params.urdf.xacro  robocross_22.urdf.xacro
quetzalcoatl_maps/: CMakeLists.txt  package.xml
quetzalcoatl_maps/3d_maps/: dvorik.db
quetzalcoatl_matlab_programs/: README.md  app2.mlapp  app3.mlapp  running_plot.m  running_plot_rot_pid.m  running_plot_speed.m
quetzalcoatl_msgs/: CMakeLists.txt  package.xml
quetzalcoatl_msgs/msg/: GazelState.msg
quetzalcoatl_msgs/scripts/: create_uc_ros_lib.py
quetzalcoatl_software/: CMakeLists.txt  package.xml
quetzalcoatl_software/config/ekf/: ekf_odom _wheel.yaml  ekf_odom_vo.yaml  ekf_odom_wheel.yaml  ekf_sim.yaml
quetzalcoatl_software/config/move_base_sim/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner.yaml
quetzalcoatl_software/config/move_base_vo/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner.yaml
quetzalcoatl_software/config/rviz/: common_sim.rviz  full_move_base.rviz
quetzalcoatl_software/launch/: start_hardware.launch
quetzalcoatl_software/launch/drivers/: move_base.launch  quetzalcoatl_tf_transforms.launch  start_joy_teleop.launch  start_keyboard_teleop.launch  tf_transforms.launch  uc_convertion_layer.launch  uc_socket_server.launch
quetzalcoatl_software/launch/full/: full_move_base_control.launch  full_start_joy_control.launch  full_start_joy_mapping.launch
quetzalcoatl_software/launch/sim/: rgbd_sim_sync.launch  start_sim_robot.launch
quetzalcoatl_software/launch/view/: rviz_multiple_rs_raw.launch
quetzalcoatl_software/scripts/: joy_ctrl.py
quetzalcoatl_software/src/robot_layer/: main.cpp
quetzalcoatl_vision/: CMakeLists.txt  package.xml
quetzalcoatl_vision/launch/: start_rtabmap_lidar.launch  start_rtabmap_lidar_demo.launch  start_rtabmap_multi.launch
quetzalcoatl_vision/launch/drivers/: start_kt_lidar.launch  start_multiple_rs_cameras.launch
quetzalcoatl_vision/rviz/: lidar_test.rviz  rs_multiple_raw.rviz
scripts/: build-lidar.sh  build-min.sh  build.sh  install_packages.sh  install_third_party.sh
software/: cameras.py  comm_terminal.py  command.py  communication.py  main.py  main_gaz.py  main_teleop.py  mqtt_comm.py  mqtt_state.py  mqtt_teleop_publisher.py  mqtt_teleop_subscriber.py  requirements.txt  run_action_tcp_server.sh  run_action_udp_server.sh  run_c920_tcp_server.sh  run_c920_udp_server.sh  run_client.sh  run_elp_server.sh  run_enc_server.sh  run_server.sh  run_tcp_client.sh  run_yuv2_tcp_server.sh  test_comm_cps.py  test_joystick.py
(+174 files in other folders)
