<?xml version="1.0"?>
<package>
  <name>quetzalcoatl_description</name>
  <version>0.0.0</version>
  <description>The quetzalcoatl-project package</description>
  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>gazebo_ros</build_depend>
  <run_depend>gazebo_ros</run_depend>

  <run_depend>ackermann_controller_plugin</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
    <gazebo_ros gazebo_model_path="${prefix}/models"/> 
  </export>
</package>
